--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 
-input[type=text],[type=date],[type=number], select {
+input[type=text],[type=date],[type=number],[type=email], select {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
