--- a/css/StyleVoiture.css
+++ b/css/StyleVoiture.css
@@ -42,16 +42,56 @@ and open the template in the editor.
     position: relative;
     cursor: pointer;
 }
-.Msg{
-    width: 100%;
-    height: auto;
-    
+#sub:hover{
+    background-color: #2980b9;
 }
-table{
+.Msg{
+    height: auto;
+    text-align: center;
+    font-family: monospace;
+    display: block;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
+    box-shadow: 0px 2px 2px 1px rgba(0,0,0,.5);
+}
+#Voitures{
     width: 50%;
     height: auto;
     margin: auto;
     box-shadow: 0 0 36px rgba(0,0,0,.5);
     margin-top: 64px;
     position: relative;
+    border-collapse: collapse;
+    font-family: monospace;
+    font-size: 18px;
+}
+tr{
+    text-align: center;
+}
+tbody tr:hover {background-color: #ddd;}
+
+#Voitures tbody tr:nth-child(odd){
+    background-color: #f2f2f2;
+}
+.BTN{
+    display: block;
+    border: none;
+    text-decoration: none;
+    font-family: sans-serif;
+    color:#FFFFFF;
+    padding: 4px;
+}
+.delete{
+    background-color: #e74c3c;
+}
+.delete:hover{
+    background-color: #c0392b;
+}
+.update{
+    background-color: #2ecc71;
+    cursor: pointer;
+}
+.update:hover{
+    background-color: #27ae60;
 }
