--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 @import "fontFaces.css";
 *{margin: 0;padding: 0;}
-body{background-color: #bdc3c7}
+body{background-color: #ecf0f1;}
 .ContainerForm{
     width: 30%;
     height: auto;
@@ -59,4 +59,51 @@ body{background-color: #bdc3c7}
     color: #F44336;
     font-family: "OpenSans";
     font-size: 36px;
+}
+.NavBar{
+    width: 100%;
+    height: 64px;
+    background-color: #3498db;
+    overflow: hidden;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    left: 0;
+}
+.menu{
+    color: #FFFFFF;
+    font-size: 32px;
+    background-color: transparent;
+    height: auto;
+    width: auto;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.menu:hover{
+    background-color: #2980b9;
+}
+.MenuBlock{
+    width: 25%;
+    min-width: fit-content;
+    position: fixed;
+    height: 0px;
+    background-color: #2980b9;
+    top: 64px;
+    left: 0;
+    transition-duration: 1s;
+    overflow: hidden;
+}
+.menuItem{
+    color: #FFFFFF;
+    font-size: 32px;
+    background-color: transparent;
+    font-family: "OpenSans";
+    text-align: center;
+    padding: 16px;
+    cursor: pointer;
+}
+.menuItem:hover{
+    background-color: #34495e;
 }
