--- a/css/StyleVoiture.css
+++ b/css/StyleVoiture.css
@@ -16,6 +16,7 @@ and open the template in the editor.
     box-shadow: 0 0 36px rgba(0,0,0,.5);
     margin-top: 64px;
     position: relative;
+    background-color: #FFFFFF;
 }
 .input{
     width: 90%;
@@ -56,7 +57,7 @@ and open the template in the editor.
     box-shadow: 0px 2px 2px 1px rgba(0,0,0,.5);
 }
 #Voitures{
-    width: 50%;
+    width: 80%;
     height: auto;
     margin: auto;
     box-shadow: 0 0 36px rgba(0,0,0,.5);
@@ -65,6 +66,7 @@ and open the template in the editor.
     border-collapse: collapse;
     font-family: monospace;
     font-size: 18px;
+    background-color: #FFFFFF;
 }
 tr{
     text-align: center;
